--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="apple-touch-icon" href="/logo.png" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0A0A0B" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Bodh Script" />
+    
     <meta name="description" content="Bodh Script Club - A modern college club website for tech enthusiasts, coding competitions, workshops, and events" />
     <meta name="keywords" content="Bodh Script Club, coding club, tech club, programming, workshops, hackathons, college club" />
     <meta name="author" content="Bodh Script Club" />
